--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
     color: rgb(229, 243, 166);
     font-family: sans-serif;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+      background-size: 100% auto;
+    }
+  }
 .main {
     color: rgb(229, 243, 166);
     font-family: sans-serif;
